--- a/ASSIGNMENT-MODULE4/index.html
+++ b/ASSIGNMENT-MODULE4/index.html
@@ -11,6 +11,6 @@
 </head>
 <body>
     <h2>THIS IS THE SOLUTION FOR MODULE 4</h2>
-    <p> PLEASE OPEN CONSOLE TO SEE THE OUTPUT</p>  
+    <p> PLEASE OPEN CONSOLE TO SEE THE OUTPUT !</p>  
 </body>
 </html>
