--- a/ASSIGNMENT-MODULE4/index.html
+++ b/ASSIGNMENT-MODULE4/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MODULE 4</title>
     <script src="hello.js"></script>
-    <script src="goodBye.js"></script>
+    <script src="goodbye.js"></script>
     <script src="script.js"></script>
 </head>
 <body>
